# omnillm

./: .env.example  .gitignore  404.html  AGENTS.md  Cargo.toml  README.md  architecture.html  implementation.html  index.html  package-lock.json  package.json  rspress.config.ts  skill.html  skills-lock.json  usage.html
docs/: architecture.md  implementation.md  index.mdx  usage.md
examples/: basic_usage.rs  multi_endpoint_demo.rs  primitive_p1_metadata_demo.rs  primitive_protocol_demo.rs  primitive_transport_modes.rs  responses_live_demo.rs
scripts/: package_release_bundles.sh
skill/: README.md  SKILL.md
src/: api.rs  api_protocol.rs  config.rs  dispatcher.rs  error.rs  gateway.rs  lib.rs  pricing.rs  primitive.rs  protocol.rs  provider_registry.rs  replay.rs  types.rs
static/: search_index.en.0f8d9236.json  search_index.en.113de4e9.json  search_index.en.3a30ef90.json  search_index.en.41d3cb36.json  search_index.en.4f14eb60.json  search_index.en.5212a88c.json  search_index.en.5b51edba.json  search_index.en.683157b0.json  search_index.en.6b6fb1bd.json  search_index.en.93399b90.json  search_index.en.b84f7dbb.json  search_index.en.b9d87114.json  search_index.en.c2feac61.json  search_index.en.def6df09.json  search_index.en.e479712d.json  search_index.en.f0ec3f74.json  search_index.en.f8a0c503.json  search_index.zh.05f6aa47.json  search_index.zh.117fa853.json  search_index.zh.26005429.json  search_index.zh.4063c684.json  search_index.zh.56e89e64.json  search_index.zh.5f583bec.json  search_index.zh.722a4bfb.json  search_index.zh.80f26d63.json  (+4 more)
tests/: api_surface.rs  (+4 more)
(+297 files in other folders)
